syntax = "proto3";
package common;

// int 包装类
message IntValue {
  // int 值
  sint32 value = 1;
}

// int list 包装类
message IntValueList {
  // intList、intArray
  repeated sint32 values = 1;
}

// long 包装类
message LongValue {
  // long 值
  sint64 value = 1;
}

// long list 包装类
message LongValueList {
  // longList、longArray
  repeated sint64 values = 1;
}

// string 包装类
message StringValue {
  // string 值
  string value = 1;
}

// string list 包装类
message StringValueList {
  // stringList、stringArray
  repeated string values = 1;
}

// bool 包装类
message BoolValue {
  // bool 值
  bool value = 1;
}

// bool list 包装类
message BoolValueList {
  // boolList、boolArray
  repeated bool values = 1;
}

// pb 对象 list 包装类
message ByteValueList {
  // pb 对象 List、pb 对象 Array
  repeated bytes values = 1;
}